crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__term__tests__ctor_multi_qualified.snap
---
source: crates/alder-parse/src/pattern/term.rs
description: "Code:\n\nData.Maybe.Nothing"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 19,
        },
    },
    value: CtorQual {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 19,
            },
        },
        module: "Data.Maybe",
        name: "Nothing",
        args: [],
    },
}
