crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__term__tests__ctor_qualified.snap
---
source: crates/alder-parse/src/pattern/term.rs
description: "Code:\n\nMaybe.Nothing"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: CtorQual {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 14,
            },
        },
        module: "Maybe",
        name: "Nothing",
        args: [],
    },
}
