crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__term__tests__ctor_simple.snap
---
source: crates/alder-parse/src/pattern/term.rs
description: "Code:\n\nNothing"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Ctor {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 8,
            },
        },
        name: "Nothing",
        args: [],
    },
}
