crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__term__tests__error_wildcard_not_var.snap
---
source: crates/alder-parse/src/pattern/term.rs
description: "Code:\n\n_foo"
---
WildcardNotVar(
    "_foo",
    4,
    1,
    1,
)
